# computed-rs

./: Cargo.toml  README.md
computed-macros/: Cargo.toml
computed-macros/src/: generating.rs  lib.rs  parsing.rs
examples/: simple.rs
src/: generating.rs  lib.rs  parsing.rs
