[workspace.package]
edition = "2021"
authors = ["ActuallyHappening actuallyhappenin42@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "computed"
description = "Rust computed property derive macro"
version = "0.0.1"
edition = { workspace = true }
authors = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.28", features = ["full"] }

[dev-dependencies]
derive-new = "0.5.9"
