[workspace.package]
edition = "2021"
authors = ["ActuallyHappening actuallyhappenin42@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "computed"
description = "Rust computed property derive macro"
version = "0.0.1"
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
static_assertions = "1.1.0"

[dependencies.computed-macros]
path = "./computed-macros"

[dev-dependencies]
derive-new = "0.5.9"